@@ -1,129 +1,73 @@
 package chopchop.logic.commands;
 
-import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.NoSuchElementException;
 
-import chopchop.model.EntryBook;
-import chopchop.model.ModelStub;
-import chopchop.model.ReadOnlyEntryBook;
-import chopchop.model.recipe.Recipe;
 import chopchop.testutil.RecipeBuilder;
+import chopchop.testutil.StubbedModel;
+import chopchop.testutil.TypicalRecipes;
+import chopchop.testutil.TypicalIngredients;
 import org.junit.jupiter.api.Test;
 
 public class AddRecipeCommandTest {
 
     @Test
-    public void execute_recipeAcceptedByModel_addSuccessful() throws Exception {
-        var modelStub = new ModelStubAcceptingRecipeAdded();
+    public void execute_recipeAcceptedByModel_addSuccessful() {
+
+        var m = StubbedModel.empty();
         var validRecipe = new RecipeBuilder().build();
 
-        var result = new AddRecipeCommand(validRecipe.getName(), validRecipe.getIngredients(),
-            validRecipe.getSteps(), validRecipe.getTags())
-                .execute(modelStub, new CommandTestUtil.HistoryManagerStub());
+        var cmd = new AddRecipeCommand(validRecipe.getName(),
+            validRecipe.getIngredients(),
+            validRecipe.getSteps(),
+            validRecipe.getTags()
+        );
 
-        assertTrue(result.didSucceed());
-        assertEquals(Arrays.asList(validRecipe), modelStub.recipesAdded);
+        var r1 = cmd.execute(m, new CommandTestUtil.HistoryManagerStub());
+
+        assertTrue(r1.didSucceed());
+        assertEquals(List.of(validRecipe), m.getRecipeBook().getEntryList());
+
+        var r2 = cmd.undo(m);
+        assertTrue(r2.didSucceed());
+        assertTrue(m.getRecipeBook().getEntryList().isEmpty());
     }
 
     @Test
-    public void equals() {
-        var appleSalad = new RecipeBuilder().withName("Apple Salad").build();
-        var bananaSalad = new RecipeBuilder().withName("Banana Salad").build();
-        var addAppleSaladCommand = new AddRecipeCommand(appleSalad.getName(), List.of(), List.of(), Set.of());
-        var addBananaSaladCommand = new AddRecipeCommand(bananaSalad.getName(), List.of(), List.of(), Set.of());
+    public void test_duplicateRecipe() {
 
-        // same object -> returns true
-        assertTrue(addAppleSaladCommand.equals(addAppleSaladCommand));
+        var m = StubbedModel.filled();
+        var validRecipe = TypicalRecipes.APRICOT_SALAD;
 
-        // same values -> returns true
-        var addAmericanoCommand = new AddRecipeCommand("Apple Salad", List.of(), List.of(), Set.of());
-        assertTrue(addAppleSaladCommand.equals(addAmericanoCommand));
+        var cmd = new AddRecipeCommand(validRecipe.getName(),
+            validRecipe.getIngredients(),
+            validRecipe.getSteps(),
+            validRecipe.getTags()
+        );
 
-        // different types -> returns false
-        assertFalse(addAppleSaladCommand.equals(1));
-
-        // null -> returns false
-        assertFalse(addAppleSaladCommand.equals(null));
-
-        // different values -> returns false
-        assertFalse(addAppleSaladCommand.equals(addBananaSaladCommand));
+        var r1 = cmd.execute(m, new CommandTestUtil.HistoryManagerStub());
+        assertTrue(r1.isError());
     }
 
-    /**
-     * A Model stub that contains a single recipe.
-     */
-    private class ModelStubWithRecipe extends ModelStub {
-        private final Recipe recipe;
+    @Test
+    public void test_duplicateIngredient() {
 
-        ModelStubWithRecipe(Recipe recipe) {
-            requireNonNull(recipe);
-            this.recipe = recipe;
-        }
+        var m = StubbedModel.filled();
+        var validRecipe = new RecipeBuilder().withIngredients(List.of(
+            TypicalIngredients.APRICOT_REF,
+            TypicalIngredients.CUSTARD_REF,
+            TypicalIngredients.APRICOT_REF
+        )).build();
 
-        @Override
-        public boolean hasRecipe(Recipe recipe) {
-            requireNonNull(recipe);
-            return this.recipe.isSame(recipe);
-        }
+        var cmd = new AddRecipeCommand(validRecipe.getName(),
+            validRecipe.getIngredients(),
+            validRecipe.getSteps(),
+            validRecipe.getTags()
+        );
 
-        @Override
-        public Optional<Recipe> findRecipeWithName(String name) {
-            requireNonNull(name);
-            return this.recipe.getName().equalsIgnoreCase(name)
-                ? Optional.of(this.recipe)
-                : Optional.empty();
-        }
-    }
-
-    /**
-     * A Model stub that always accepts the recipe being added.
-     */
-    private class ModelStubAcceptingRecipeAdded extends ModelStub {
-        final ArrayList<Recipe> recipesAdded = new ArrayList<>();
-
-        @Override
-        public boolean hasRecipe(Recipe recipe) {
-            requireNonNull(recipe);
-            return recipesAdded.stream().anyMatch(recipe::isSame);
-        }
-
-        @Override
-        public void addRecipe(Recipe recipe) {
-            requireNonNull(recipe);
-            recipesAdded.add(recipe);
-        }
-
-        @Override
-        public Optional<Recipe> findRecipeWithName(String name) {
-            requireNonNull(name);
-            return this.recipesAdded
-                .stream()
-                .filter(r -> r.getName().equalsIgnoreCase(name))
-                .findFirst();
-        }
-
-        @Override
-        public void setRecipe(Recipe target, Recipe editedRecipe) {
-            var r = this.recipesAdded.indexOf(target);
-            if (r == -1) {
-                throw new NoSuchElementException("recipe not found");
-            }
-
-            this.recipesAdded.set(r, editedRecipe);
-        }
-
-        @Override
-        public ReadOnlyEntryBook<Recipe> getRecipeBook() {
-            return new EntryBook<>();
-        }
+        var r1 = cmd.execute(m, new CommandTestUtil.HistoryManagerStub());
+        assertTrue(r1.isError());
     }
 }
